# liu-courses

./: .gitignore  LICENSE  README.md  liu-courses.cabal  run  updateCourses
app/: Main.hs
res/: courses.html
src/: Config.hs  Cron.hs  LiuCourses.hs  Models.hs  Sh.hs
src/Api/: Core.hs  Course.hs  Program.hs
src/Db/: Course.hs  Model.hs
test/: Spec.hs
