name:                liu-courses
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/liu-courses#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LiuCourses
                     , Models
                     , Config
                     , Sh
                     , Api.Course
                     , Api.Core
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , persistent ==2.*
                     , persistent-postgresql ==2.*
                     , persistent-template ==2.*
                     , text ==1.*
                     , time ==1.*
                     , split ==0.2.*
                     , hxt ==9.*
                     , HandsomeSoup ==0.4.*
                     , bytestring ==0.10.*
                     , mtl ==2.2.*
                     , monad-logger ==0.3.*
                     , transformers ==0.5.*
                     , data-default ==0.7.*
                     , warp == 3.2.*
                     , http-types ==0.9.*
                     , wai-extra == 3.0.*
  default-language:    Haskell2010

executable liu-courses-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , liu-courses
  default-language:    Haskell2010

test-suite liu-courses-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , liu-courses
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/liu-courses
